import "util.proto";

message PartnerAdditionalSubscriber
{
    /**
       Each time another endpoint attempts to lock a resource that
       we're already locked on, we receive this message.
     */
    
    required UUID event_uuid = 1;
    required UUID additional_subscriber_uuid = 2;
    required UUID host_uuid = 3;
    required UUID resource_uuid = 4;
}