import "util.proto";
import "varStoreDeltas.proto";

option java_package = "waldo_protobuffs";
option java_outer_classname = "PartnerNotifyOfPeeredModifiedProto";


message PartnerNotifyOfPeeredModified
{
    required UUID event_uuid = 1;
    required Priority priority = 2;
    required UUID reply_with_uuid = 3;
    required VarStoreDeltas glob_deltas = 4;
}